versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Table.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalTable
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function TableDefaultConst() &
      bind(C, name='TableDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function TableDefaultConst

!! Create, default
function TableDefault() &
      bind(C, name='TableDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function TableDefault

!! Create, general, const
function TableCreateConst( &
   rows, &
   columns, &
   columnHeaders, &
   data &
) &
      bind(C, name='TableCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_int), value, intent(in) :: rows
   integer(c_int), value, intent(in) :: columns
   type(c_ptr), value :: columnHeaders
   type(c_ptr), value :: data
   type(c_ptr) :: handle
end function TableCreateConst

!! Create, general
function TableCreate( &
   rows, &
   columns, &
   columnHeaders, &
   data &
) &
      bind(C, name='TableCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_int), value, intent(in) :: rows
   integer(c_int), value, intent(in) :: columns
   type(c_ptr), value :: columnHeaders
   type(c_ptr), value :: data
   type(c_ptr) :: handle
end function TableCreate

!! Assign
subroutine TableAssign(handleLHS, handleRHS) &
      bind(C, name='TableAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine TableAssign

!! Delete
subroutine TableDelete(handle) &
      bind(C, name='TableDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine TableDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function TableRead(handle, filename, filenameSize) &
      bind(C, name='TableRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function TableRead

!! Write to file
function TableWrite(handle, filename, filenameSize) &
      bind(C, name='TableWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function TableWrite

!! Print to standard output, in our prettyprinting format
function TablePrint(handle) &
      bind(C, name='TablePrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function TablePrint

!! Print to standard output, as XML
function TablePrintXML(handle) &
      bind(C, name='TablePrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function TablePrintXML

!! Print to standard output, as JSON
function TablePrintJSON(handle) &
      bind(C, name='TablePrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function TablePrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: rows
!! -----------------------------------------------------------------------------

!! Has
function TableRowsHas(handle) &
      bind(C, name='TableRowsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function TableRowsHas

!! Get
function TableRowsGet(handle) &
      bind(C, name='TableRowsGet') &
      result(rows)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: rows
end function TableRowsGet

!! Set
subroutine TableRowsSet(handle, rows, rowsSize) &
      bind(C, name='TableRowsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: rowsSize
   character(c_char), intent(in) :: rows(rowsSize)
end subroutine TableRowsSet


!! -----------------------------------------------------------------------------
!! Metadatum: columns
!! -----------------------------------------------------------------------------

!! Has
function TableColumnsHas(handle) &
      bind(C, name='TableColumnsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function TableColumnsHas

!! Get
function TableColumnsGet(handle) &
      bind(C, name='TableColumnsGet') &
      result(columns)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: columns
end function TableColumnsGet

!! Set
subroutine TableColumnsSet(handle, columns, columnsSize) &
      bind(C, name='TableColumnsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: columnsSize
   character(c_char), intent(in) :: columns(columnsSize)
end subroutine TableColumnsSet


!! -----------------------------------------------------------------------------
!! Child: columnHeaders
!! -----------------------------------------------------------------------------

!! Has
function TableColumnHeadersHas(handle) &
      bind(C, name='TableColumnHeadersHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function TableColumnHeadersHas

!! Get, const
function TableColumnHeadersGetConst(handle) &
      bind(C, name='TableColumnHeadersGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function TableColumnHeadersGetConst

!! Get
function TableColumnHeadersGet(handle) &
      bind(C, name='TableColumnHeadersGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function TableColumnHeadersGet

!! Set
subroutine TableColumnHeadersSet(handle, fieldHandle) &
      bind(C, name='TableColumnHeadersSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine TableColumnHeadersSet


!! -----------------------------------------------------------------------------
!! Child: data
!! -----------------------------------------------------------------------------

!! Has
function TableDataHas(handle) &
      bind(C, name='TableDataHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function TableDataHas

!! Get, const
function TableDataGetConst(handle) &
      bind(C, name='TableDataGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function TableDataGetConst

!! Get
function TableDataGet(handle) &
      bind(C, name='TableDataGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function TableDataGet

!! Set
subroutine TableDataSet(handle, fieldHandle) &
      bind(C, name='TableDataSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine TableDataSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalTable
